--- a/src/Main.scss
+++ b/src/Main.scss
@@ -3,6 +3,7 @@
 body {
   background-color: #2d3038; // Override sh-core
   font-family: "Open Sans", sans-serif;
+  color: rgba(255,255,255, 0.8);
 }
 
 .App {
@@ -15,10 +16,8 @@ body {
 }
 
 .App-header {
-  
   height: 150px;
   padding: 20px;
-  color: white;
 }
 
 .App-intro {
